--- a/index.html
+++ b/index.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Under Construction</title>
+	<style>
+		body {
+			background-color: #f2f2f2;
+			font-family: Arial, sans-serif;
+			text-align: center;
+			margin: 0;
+			padding: 0;
+		}
+
+		h1 {
+			font-size: 48px;
+			color: #333;
+			margin-top: 50px;
+		}
+
+		h2 {
+			font-size: 36px;
+			color: #333;
+			margin-top: 50px;
+		}
+
+		p {
+			font-size: 24px;
+			color: #666;
+			margin-top: 20px;
+		}
+
+		img {
+			margin-top: 50px;
+			max-width: 100%;
+			height: auto;
+		}
+
+	</style>
 </head>
 <body>
-
+	<div class="container">
+		<h1>Kudret Elif BERKMAN</h1>
+		<h2>My Personal Website is Under Construction</h2>
+		<p>Please check back soon for updates.</p>
+		<img src="images/under_construct.jpg" alt="Under Construction">
+	</div>
 </body>
 </html>
