--- a/index.html
+++ b/index.html
@@ -47,4 +47,4 @@
 		<img src="images/under_construct.jpg" alt="Under Construction">
 	</div>
 </body>
-</html>
+</html><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae ipsum vitae velit finibus feugiat. Mauris lacinia nunc sed massa viverra, lacinia sollicitudin dolor sollicitudin. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris consequat urna id lectus vestibulum ullamcorper. Vestibulum a cursus quam. Aenean vitae pulvinar libero, vel semper velit. Aenean ac neque eleifend, pretium velit in, tristique dolor. Sed maximus auctor maximus. Pellentesque porttitor justo eros, in feugiat sem venenatis nec. Proin mattis tortor ac aliquam vehicula.</p>
